# rust-ci-playground

./: Cargo.toml  README.md  results.md
.devcontainer/: Dockerfile
.github/workflows/: cache.yml
src/: main.rs
